bm25/01_create_pyserini_index.ipynb: filename change

--- a/bm25/01_create_pyserini_index.ipynb
+++ b/bm25/01_create_pyserini_index.ipynb
@@ -148,7 +148,7 @@
    "source": [
     "semeval_path = os.path.join('..', 'Data', 'SemEval2014_Task4')\n",
     "collection_path = 'collection'\n",
-    "index_path = 'indexes'"
+    "index_path = 'index'"
    ]
   },
   {
