bm25/01_create_pyserini_index.ipynb: fix duplicate labels

--- a/bm25/01_create_pyserini_index.ipynb
+++ b/bm25/01_create_pyserini_index.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 2926,
@@ -110,7 +110,6 @@
     "import xml.etree.ElementTree as ET\n",
     "import pathlib\n",
     "\n",
-    "from tqdm import tqdm\n",
     "import jsonlines \n",
     "from pyserini.search import SimpleSearcher"
    ]
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -313,38 +312,38 @@
      "output_type": "stream",
      "text": [
       "WARNING: sun.reflect.Reflection.getCallerClass is not supported. This will impact performance.\n",
-      "2020-12-06 18:36:59,234 INFO  [main] index.IndexCollection (IndexCollection.java:636) - Setting log level to INFO\n",
-      "2020-12-06 18:36:59,249 INFO  [main] index.IndexCollection (IndexCollection.java:639) - Starting indexer...\n",
-      "2020-12-06 18:36:59,250 INFO  [main] index.IndexCollection (IndexCollection.java:640) - ============ Loading Parameters ============\n",
-      "2020-12-06 18:36:59,250 INFO  [main] index.IndexCollection (IndexCollection.java:641) - DocumentCollection path: collection/laptop_test\n",
-      "2020-12-06 18:36:59,251 INFO  [main] index.IndexCollection (IndexCollection.java:642) - CollectionClass: JsonCollection\n",
-      "2020-12-06 18:36:59,253 INFO  [main] index.IndexCollection (IndexCollection.java:643) - Generator: DefaultLuceneDocumentGenerator\n",
-      "2020-12-06 18:36:59,257 INFO  [main] index.IndexCollection (IndexCollection.java:644) - Threads: 1\n",
-      "2020-12-06 18:36:59,258 INFO  [main] index.IndexCollection (IndexCollection.java:645) - Stemmer: porter\n",
-      "2020-12-06 18:36:59,259 INFO  [main] index.IndexCollection (IndexCollection.java:646) - Keep stopwords? false\n",
-      "2020-12-06 18:36:59,260 INFO  [main] index.IndexCollection (IndexCollection.java:647) - Stopwords:  null\n",
-      "2020-12-06 18:36:59,266 INFO  [main] index.IndexCollection (IndexCollection.java:648) - Store positions? true\n",
-      "2020-12-06 18:36:59,266 INFO  [main] index.IndexCollection (IndexCollection.java:649) - Store docvectors? true\n",
-      "2020-12-06 18:36:59,268 INFO  [main] index.IndexCollection (IndexCollection.java:650) - Store document \"contents\" field? false\n",
-      "2020-12-06 18:36:59,269 INFO  [main] index.IndexCollection (IndexCollection.java:651) - Store document \"raw\" field? true\n",
-      "2020-12-06 18:36:59,276 INFO  [main] index.IndexCollection (IndexCollection.java:652) - Optimize (merge segments)? false\n",
-      "2020-12-06 18:36:59,277 INFO  [main] index.IndexCollection (IndexCollection.java:653) - Whitelist: null\n",
-      "2020-12-06 18:36:59,277 INFO  [main] index.IndexCollection (IndexCollection.java:673) - Directly building Lucene indexes...\n",
-      "2020-12-06 18:36:59,278 INFO  [main] index.IndexCollection (IndexCollection.java:674) - Index path: index/laptop_test\n",
-      "2020-12-06 18:36:59,359 INFO  [main] index.IndexCollection (IndexCollection.java:723) - ============ Indexing Collection ============\n",
-      "2020-12-06 18:37:00,017 INFO  [main] index.IndexCollection (IndexCollection.java:784) - Thread pool with 1 threads initialized.\n",
-      "2020-12-06 18:37:00,018 INFO  [main] index.IndexCollection (IndexCollection.java:786) - Initializing collection in collection/laptop_test\n",
-      "2020-12-06 18:37:00,033 INFO  [main] index.IndexCollection (IndexCollection.java:789) - 1 file found\n",
-      "2020-12-06 18:37:00,033 INFO  [main] index.IndexCollection (IndexCollection.java:790) - Starting to index...\n",
-      "2020-12-06 18:37:02,624 DEBUG [pool-2-thread-1] index.IndexCollection$LocalIndexerThread (IndexCollection.java:238) - laptop_test/laptop_test.jsonl: 800 docs added.\n",
-      "2020-12-06 18:37:03,849 INFO  [main] index.IndexCollection (IndexCollection.java:874) - Indexing Complete! 800 documents indexed\n",
-      "2020-12-06 18:37:03,852 INFO  [main] index.IndexCollection (IndexCollection.java:875) - ============ Final Counter Values ============\n",
-      "2020-12-06 18:37:03,855 INFO  [main] index.IndexCollection (IndexCollection.java:876) - indexed:              800\n",
-      "2020-12-06 18:37:03,856 INFO  [main] index.IndexCollection (IndexCollection.java:877) - unindexable:            0\n",
-      "2020-12-06 18:37:03,856 INFO  [main] index.IndexCollection (IndexCollection.java:878) - empty:                  0\n",
-      "2020-12-06 18:37:03,856 INFO  [main] index.IndexCollection (IndexCollection.java:879) - skipped:                0\n",
-      "2020-12-06 18:37:03,857 INFO  [main] index.IndexCollection (IndexCollection.java:880) - errors:                 0\n",
-      "2020-12-06 18:37:03,868 INFO  [main] index.IndexCollection (IndexCollection.java:883) - Total 800 documents indexed in 00:00:04\n"
+      "2020-12-06 19:36:39,406 INFO  [main] index.IndexCollection (IndexCollection.java:636) - Setting log level to INFO\n",
+      "2020-12-06 19:36:39,419 INFO  [main] index.IndexCollection (IndexCollection.java:639) - Starting indexer...\n",
+      "2020-12-06 19:36:39,419 INFO  [main] index.IndexCollection (IndexCollection.java:640) - ============ Loading Parameters ============\n",
+      "2020-12-06 19:36:39,421 INFO  [main] index.IndexCollection (IndexCollection.java:641) - DocumentCollection path: collection/laptop_test\n",
+      "2020-12-06 19:36:39,422 INFO  [main] index.IndexCollection (IndexCollection.java:642) - CollectionClass: JsonCollection\n",
+      "2020-12-06 19:36:39,427 INFO  [main] index.IndexCollection (IndexCollection.java:643) - Generator: DefaultLuceneDocumentGenerator\n",
+      "2020-12-06 19:36:39,431 INFO  [main] index.IndexCollection (IndexCollection.java:644) - Threads: 1\n",
+      "2020-12-06 19:36:39,434 INFO  [main] index.IndexCollection (IndexCollection.java:645) - Stemmer: porter\n",
+      "2020-12-06 19:36:39,437 INFO  [main] index.IndexCollection (IndexCollection.java:646) - Keep stopwords? false\n",
+      "2020-12-06 19:36:39,438 INFO  [main] index.IndexCollection (IndexCollection.java:647) - Stopwords:  null\n",
+      "2020-12-06 19:36:39,440 INFO  [main] index.IndexCollection (IndexCollection.java:648) - Store positions? true\n",
+      "2020-12-06 19:36:39,441 INFO  [main] index.IndexCollection (IndexCollection.java:649) - Store docvectors? true\n",
+      "2020-12-06 19:36:39,443 INFO  [main] index.IndexCollection (IndexCollection.java:650) - Store document \"contents\" field? false\n",
+      "2020-12-06 19:36:39,448 INFO  [main] index.IndexCollection (IndexCollection.java:651) - Store document \"raw\" field? true\n",
+      "2020-12-06 19:36:39,460 INFO  [main] index.IndexCollection (IndexCollection.java:652) - Optimize (merge segments)? false\n",
+      "2020-12-06 19:36:39,465 INFO  [main] index.IndexCollection (IndexCollection.java:653) - Whitelist: null\n",
+      "2020-12-06 19:36:39,466 INFO  [main] index.IndexCollection (IndexCollection.java:673) - Directly building Lucene indexes...\n",
+      "2020-12-06 19:36:39,467 INFO  [main] index.IndexCollection (IndexCollection.java:674) - Index path: index/laptop_test\n",
+      "2020-12-06 19:36:39,495 INFO  [main] index.IndexCollection (IndexCollection.java:723) - ============ Indexing Collection ============\n",
+      "2020-12-06 19:36:39,910 INFO  [main] index.IndexCollection (IndexCollection.java:784) - Thread pool with 1 threads initialized.\n",
+      "2020-12-06 19:36:39,911 INFO  [main] index.IndexCollection (IndexCollection.java:786) - Initializing collection in collection/laptop_test\n",
+      "2020-12-06 19:36:39,922 INFO  [main] index.IndexCollection (IndexCollection.java:789) - 1 file found\n",
+      "2020-12-06 19:36:39,922 INFO  [main] index.IndexCollection (IndexCollection.java:790) - Starting to index...\n",
+      "2020-12-06 19:36:42,261 DEBUG [pool-2-thread-1] index.IndexCollection$LocalIndexerThread (IndexCollection.java:238) - laptop_test/laptop_test.jsonl: 800 docs added.\n",
+      "2020-12-06 19:36:43,304 INFO  [main] index.IndexCollection (IndexCollection.java:874) - Indexing Complete! 800 documents indexed\n",
+      "2020-12-06 19:36:43,305 INFO  [main] index.IndexCollection (IndexCollection.java:875) - ============ Final Counter Values ============\n",
+      "2020-12-06 19:36:43,308 INFO  [main] index.IndexCollection (IndexCollection.java:876) - indexed:              800\n",
+      "2020-12-06 19:36:43,310 INFO  [main] index.IndexCollection (IndexCollection.java:877) - unindexable:            0\n",
+      "2020-12-06 19:36:43,313 INFO  [main] index.IndexCollection (IndexCollection.java:878) - empty:                  0\n",
+      "2020-12-06 19:36:43,314 INFO  [main] index.IndexCollection (IndexCollection.java:879) - skipped:                0\n",
+      "2020-12-06 19:36:43,315 INFO  [main] index.IndexCollection (IndexCollection.java:880) - errors:                 0\n",
+      "2020-12-06 19:36:43,331 INFO  [main] index.IndexCollection (IndexCollection.java:883) - Total 800 documents indexed in 00:00:03\n"
      ]
     }
    ],
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -371,38 +370,38 @@
      "output_type": "stream",
      "text": [
       "WARNING: sun.reflect.Reflection.getCallerClass is not supported. This will impact performance.\n",
-      "2020-12-06 18:37:15,382 INFO  [main] index.IndexCollection (IndexCollection.java:636) - Setting log level to INFO\n",
-      "2020-12-06 18:37:15,388 INFO  [main] index.IndexCollection (IndexCollection.java:639) - Starting indexer...\n",
-      "2020-12-06 18:37:15,389 INFO  [main] index.IndexCollection (IndexCollection.java:640) - ============ Loading Parameters ============\n",
-      "2020-12-06 18:37:15,390 INFO  [main] index.IndexCollection (IndexCollection.java:641) - DocumentCollection path: collection/restaurant_test\n",
-      "2020-12-06 18:37:15,392 INFO  [main] index.IndexCollection (IndexCollection.java:642) - CollectionClass: JsonCollection\n",
-      "2020-12-06 18:37:15,393 INFO  [main] index.IndexCollection (IndexCollection.java:643) - Generator: DefaultLuceneDocumentGenerator\n",
-      "2020-12-06 18:37:15,394 INFO  [main] index.IndexCollection (IndexCollection.java:644) - Threads: 1\n",
-      "2020-12-06 18:37:15,396 INFO  [main] index.IndexCollection (IndexCollection.java:645) - Stemmer: porter\n",
-      "2020-12-06 18:37:15,397 INFO  [main] index.IndexCollection (IndexCollection.java:646) - Keep stopwords? false\n",
-      "2020-12-06 18:37:15,398 INFO  [main] index.IndexCollection (IndexCollection.java:647) - Stopwords:  null\n",
-      "2020-12-06 18:37:15,399 INFO  [main] index.IndexCollection (IndexCollection.java:648) - Store positions? true\n",
-      "2020-12-06 18:37:15,401 INFO  [main] index.IndexCollection (IndexCollection.java:649) - Store docvectors? true\n",
-      "2020-12-06 18:37:15,402 INFO  [main] index.IndexCollection (IndexCollection.java:650) - Store document \"contents\" field? false\n",
-      "2020-12-06 18:37:15,403 INFO  [main] index.IndexCollection (IndexCollection.java:651) - Store document \"raw\" field? true\n",
-      "2020-12-06 18:37:15,404 INFO  [main] index.IndexCollection (IndexCollection.java:652) - Optimize (merge segments)? false\n",
-      "2020-12-06 18:37:15,405 INFO  [main] index.IndexCollection (IndexCollection.java:653) - Whitelist: null\n",
-      "2020-12-06 18:37:15,406 INFO  [main] index.IndexCollection (IndexCollection.java:673) - Directly building Lucene indexes...\n",
-      "2020-12-06 18:37:15,409 INFO  [main] index.IndexCollection (IndexCollection.java:674) - Index path: index/restaurant_test\n",
-      "2020-12-06 18:37:15,425 INFO  [main] index.IndexCollection (IndexCollection.java:723) - ============ Indexing Collection ============\n",
-      "2020-12-06 18:37:15,808 INFO  [main] index.IndexCollection (IndexCollection.java:784) - Thread pool with 1 threads initialized.\n",
-      "2020-12-06 18:37:15,816 INFO  [main] index.IndexCollection (IndexCollection.java:786) - Initializing collection in collection/restaurant_test\n",
-      "2020-12-06 18:37:15,826 INFO  [main] index.IndexCollection (IndexCollection.java:789) - 1 file found\n",
-      "2020-12-06 18:37:15,827 INFO  [main] index.IndexCollection (IndexCollection.java:790) - Starting to index...\n",
-      "2020-12-06 18:37:17,370 DEBUG [pool-2-thread-1] index.IndexCollection$LocalIndexerThread (IndexCollection.java:238) - restaurant_test/restaurant_test.jsonl: 800 docs added.\n",
-      "2020-12-06 18:37:18,225 INFO  [main] index.IndexCollection (IndexCollection.java:874) - Indexing Complete! 800 documents indexed\n",
-      "2020-12-06 18:37:18,226 INFO  [main] index.IndexCollection (IndexCollection.java:875) - ============ Final Counter Values ============\n",
-      "2020-12-06 18:37:18,227 INFO  [main] index.IndexCollection (IndexCollection.java:876) - indexed:              800\n",
-      "2020-12-06 18:37:18,227 INFO  [main] index.IndexCollection (IndexCollection.java:877) - unindexable:            0\n",
-      "2020-12-06 18:37:18,227 INFO  [main] index.IndexCollection (IndexCollection.java:878) - empty:                  0\n",
-      "2020-12-06 18:37:18,228 INFO  [main] index.IndexCollection (IndexCollection.java:879) - skipped:                0\n",
-      "2020-12-06 18:37:18,228 INFO  [main] index.IndexCollection (IndexCollection.java:880) - errors:                 0\n",
-      "2020-12-06 18:37:18,243 INFO  [main] index.IndexCollection (IndexCollection.java:883) - Total 800 documents indexed in 00:00:02\n"
+      "2020-12-06 19:37:00,159 INFO  [main] index.IndexCollection (IndexCollection.java:636) - Setting log level to INFO\n",
+      "2020-12-06 19:37:00,167 INFO  [main] index.IndexCollection (IndexCollection.java:639) - Starting indexer...\n",
+      "2020-12-06 19:37:00,167 INFO  [main] index.IndexCollection (IndexCollection.java:640) - ============ Loading Parameters ============\n",
+      "2020-12-06 19:37:00,169 INFO  [main] index.IndexCollection (IndexCollection.java:641) - DocumentCollection path: collection/restaurant_test\n",
+      "2020-12-06 19:37:00,170 INFO  [main] index.IndexCollection (IndexCollection.java:642) - CollectionClass: JsonCollection\n",
+      "2020-12-06 19:37:00,171 INFO  [main] index.IndexCollection (IndexCollection.java:643) - Generator: DefaultLuceneDocumentGenerator\n",
+      "2020-12-06 19:37:00,173 INFO  [main] index.IndexCollection (IndexCollection.java:644) - Threads: 1\n",
+      "2020-12-06 19:37:00,174 INFO  [main] index.IndexCollection (IndexCollection.java:645) - Stemmer: porter\n",
+      "2020-12-06 19:37:00,174 INFO  [main] index.IndexCollection (IndexCollection.java:646) - Keep stopwords? false\n",
+      "2020-12-06 19:37:00,175 INFO  [main] index.IndexCollection (IndexCollection.java:647) - Stopwords:  null\n",
+      "2020-12-06 19:37:00,176 INFO  [main] index.IndexCollection (IndexCollection.java:648) - Store positions? true\n",
+      "2020-12-06 19:37:00,176 INFO  [main] index.IndexCollection (IndexCollection.java:649) - Store docvectors? true\n",
+      "2020-12-06 19:37:00,179 INFO  [main] index.IndexCollection (IndexCollection.java:650) - Store document \"contents\" field? false\n",
+      "2020-12-06 19:37:00,179 INFO  [main] index.IndexCollection (IndexCollection.java:651) - Store document \"raw\" field? true\n",
+      "2020-12-06 19:37:00,200 INFO  [main] index.IndexCollection (IndexCollection.java:652) - Optimize (merge segments)? false\n",
+      "2020-12-06 19:37:00,201 INFO  [main] index.IndexCollection (IndexCollection.java:653) - Whitelist: null\n",
+      "2020-12-06 19:37:00,202 INFO  [main] index.IndexCollection (IndexCollection.java:673) - Directly building Lucene indexes...\n",
+      "2020-12-06 19:37:00,202 INFO  [main] index.IndexCollection (IndexCollection.java:674) - Index path: index/restaurant_test\n",
+      "2020-12-06 19:37:00,218 INFO  [main] index.IndexCollection (IndexCollection.java:723) - ============ Indexing Collection ============\n",
+      "2020-12-06 19:37:00,752 INFO  [main] index.IndexCollection (IndexCollection.java:784) - Thread pool with 1 threads initialized.\n",
+      "2020-12-06 19:37:00,756 INFO  [main] index.IndexCollection (IndexCollection.java:786) - Initializing collection in collection/restaurant_test\n",
+      "2020-12-06 19:37:00,762 INFO  [main] index.IndexCollection (IndexCollection.java:789) - 1 file found\n",
+      "2020-12-06 19:37:00,764 INFO  [main] index.IndexCollection (IndexCollection.java:790) - Starting to index...\n",
+      "2020-12-06 19:37:03,036 DEBUG [pool-2-thread-1] index.IndexCollection$LocalIndexerThread (IndexCollection.java:238) - restaurant_test/restaurant_test.jsonl: 800 docs added.\n",
+      "2020-12-06 19:37:04,121 INFO  [main] index.IndexCollection (IndexCollection.java:874) - Indexing Complete! 800 documents indexed\n",
+      "2020-12-06 19:37:04,122 INFO  [main] index.IndexCollection (IndexCollection.java:875) - ============ Final Counter Values ============\n",
+      "2020-12-06 19:37:04,123 INFO  [main] index.IndexCollection (IndexCollection.java:876) - indexed:              800\n",
+      "2020-12-06 19:37:04,125 INFO  [main] index.IndexCollection (IndexCollection.java:877) - unindexable:            0\n",
+      "2020-12-06 19:37:04,125 INFO  [main] index.IndexCollection (IndexCollection.java:878) - empty:                  0\n",
+      "2020-12-06 19:37:04,126 INFO  [main] index.IndexCollection (IndexCollection.java:879) - skipped:                0\n",
+      "2020-12-06 19:37:04,128 INFO  [main] index.IndexCollection (IndexCollection.java:880) - errors:                 0\n",
+      "2020-12-06 19:37:04,148 INFO  [main] index.IndexCollection (IndexCollection.java:883) - Total 800 documents indexed in 00:00:03\n"
      ]
     }
    ],
@@ -430,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -481,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -647,6 +646,11 @@
     "    # write query/relevant doc pairs to qrels file\n",
     "    with open(save_path, 'w') as f:\n",
     "        for i in rel_docIDs.keys():\n",
+    "            # Some documents may have two identical (aspect, term) labels\n",
+    "            # because the aspect term occur multiple times within the sentence\n",
+    "            rel_docIDs[i] = list(set(rel_docIDs[i]))\n",
+    "            rel_docIDs[i].sort()\n",
+    "\n",
     "            for rd in rel_docIDs[i]:\n",
     "                line = str(i+1) + '\\t' + '0' + '\\t' + rd + '\\t' + '1'\n",
     "                f.write(\"%s\\n\" % line)"
