--- a/bm25/02_run_bm25.ipynb
+++ b/bm25/02_run_bm25.ipynb
@@ -135,8 +135,8 @@
    "outputs": [],
    "source": [
     "index_path_laptop = os.path.join('.', 'index', 'laptop_test')\n",
-    "queries_path_laptop = os.path.join('test_queries_laptop.txt')\n",
-    "results_path_laptop = os.path.join('test_results_laptop.txt')"
+    "queries_path_laptop = os.path.join('test_queries_laptop_original.txt')\n",
+    "results_path_laptop = os.path.join('test_results_laptop_original.txt')"
    ]
   },
   {
@@ -177,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query_results_laptop.txt\n"
+      "test_results_laptop_original.txt\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
     "    for query in f:\n",
     "        q_num += 1\n",
     "        \n",
-    "        hits = searcher_laptop.search(q=query, k=1000)\n",
+    "        hits = searcher_laptop.search(q=query, k=400)\n",
     "\n",
     "        for i in range(len(hits)):\n",
     "            line = str(q_num) + ' Q0 ' + hits[i].docid + ' ' + str(i+1) + ' ' + '%.8f' % hits[i].score + ' bm25'\n",
@@ -220,8 +220,8 @@
    "outputs": [],
    "source": [
     "index_path_restaurant = os.path.join('.', 'index', 'restaurant_test')\n",
-    "queries_path_restaurant = os.path.join('test_queries_restaurant.txt')\n",
-    "results_path_restaurant = os.path.join('test_results_restaurant.txt')"
+    "queries_path_restaurant = os.path.join('test_queries_restaurant_original.txt')\n",
+    "results_path_restaurant = os.path.join('test_results_restaurant_original.txt')"
    ]
   },
   {
@@ -242,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_results_restaurant.txt\n"
+      "test_results_restaurant_original.txt\n"
      ]
     }
    ],
@@ -262,7 +262,7 @@
     "    for query in f:\n",
     "        q_num += 1\n",
     "        \n",
-    "        hits = searcher_restaurant.search(q=query, k=1000)\n",
+    "        hits = searcher_restaurant.search(q=query, k=400)\n",
     "\n",
     "        for i in range(len(hits)):\n",
     "            line = str(q_num) + ' Q0 ' + hits[i].docid + ' ' + str(i+1) + ' ' + '%.8f' % hits[i].score + ' bm25'\n",
