bm25/02_run_bm25.ipynb: regenerated query results

--- a/bm25/02_run_bm25.ipynb
+++ b/bm25/02_run_bm25.ipynb
@@ -135,8 +135,8 @@
    "outputs": [],
    "source": [
     "index_path_laptop = os.path.join('.', 'index', 'laptop_test')\n",
-    "queries_path_laptop = os.path.join('test_queries_laptop_original.txt')\n",
-    "results_path_laptop = os.path.join('test_results_laptop_original.txt')"
+    "queries_path_laptop = os.path.join('test_queries_laptop.txt')\n",
+    "results_path_laptop = os.path.join('test_results_laptop.txt')"
    ]
   },
   {
@@ -177,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_results_laptop_original.txt\n"
+      "test_results_laptop.txt\n"
      ]
     }
    ],
@@ -220,8 +220,8 @@
    "outputs": [],
    "source": [
     "index_path_restaurant = os.path.join('.', 'index', 'restaurant_test')\n",
-    "queries_path_restaurant = os.path.join('test_queries_restaurant_original.txt')\n",
-    "results_path_restaurant = os.path.join('test_results_restaurant_original.txt')"
+    "queries_path_restaurant = os.path.join('test_queries_restaurant.txt')\n",
+    "results_path_restaurant = os.path.join('test_results_restaurant.txt')"
    ]
   },
   {
@@ -242,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_results_restaurant_original.txt\n"
+      "test_results_restaurant.txt\n"
      ]
     }
    ],
