siamese/sentence_bert_contrastive.ipynb: cleanups

--- a/siamese/sentence_bert_contrastive.ipynb
+++ b/siamese/sentence_bert_contrastive.ipynb
@@ -1,16 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
+    "# Siamese Network with BERT Pooling: Contrastive Loss Function\n",
     "\n",
-    "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"\n",
+    "- We train our siamese network with the training data from SemEval 2014.\n",
+    "- We use **contrastive loss function**.\n",
+    "- We then run k-NN search with test queries (previously generated for BM25) to produce test query results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Google Colab setups\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\""
+    "This part only gets executed if this notebook is being run under Google Colab. **Please change the working path  directory below in advance!**"
    ]
   },
   {
@@ -55,82 +62,20 @@
     "    drive.mount('/content/drive')\n",
     "    \n",
     "    # If there's a package I need to install separately, do it here\n",
-    "    #!pip install sentence-transformers==0.3.9 transformers==3.4.0\n",
+    "    !pip install sentence-transformers==0.3.9 transformers==3.4.0\n",
     "\n",
     "    # cd to the appropriate working directory under my Google Drive\n",
-    "    %cd '/content/drive/My Drive/CS646_Final_Project'\n",
+    "    %cd '/content/drive/My Drive/CS646_Final_Project/Siamese'\n",
     "    \n",
     "    # List the directory contents\n",
     "    !ls"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 3957,
-     "status": "ok",
-     "timestamp": 1606296330995,
-     "user": {
-      "displayName": "Ronald Seoh",
-      "photoUrl": "",
-      "userId": "10284188050297676522"
-     },
-     "user_tz": 300
-    },
-    "id": "dup1v7BpN7Gr",
-    "outputId": "09096543-464d-4be5-c22c-ea6f24ba2020"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pyserini==0.9.4.0 in /usr/local/lib/python3.6/dist-packages (from -r requirements.txt (line 1)) (0.9.4.0)\n",
-      "Requirement already satisfied: sentence-transformers==0.3.9 in /usr/local/lib/python3.6/dist-packages (from -r requirements.txt (line 2)) (0.3.9)\n",
-      "Requirement already satisfied: transformers==3.4.0 in /usr/local/lib/python3.6/dist-packages (from -r requirements.txt (line 3)) (3.4.0)\n",
-      "Requirement already satisfied: jsonlines==1.2.0 in /usr/local/lib/python3.6/dist-packages (from -r requirements.txt (line 4)) (1.2.0)\n",
-      "Requirement already satisfied: Cython in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (0.29.21)\n",
-      "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (0.23.2)\n",
-      "Requirement already satisfied: pandas in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.1.4)\n",
-      "Requirement already satisfied: pyjnius in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.3.0)\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.18.4)\n",
-      "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from pyserini==0.9.4.0->-r requirements.txt (line 1)) (1.5.4)\n",
-      "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from sentence-transformers==0.3.9->-r requirements.txt (line 2)) (4.53.0)\n",
-      "Requirement already satisfied: nltk in /usr/local/lib/python3.6/dist-packages (from sentence-transformers==0.3.9->-r requirements.txt (line 2)) (3.5)\n",
-      "Requirement already satisfied: torch>=1.6.0 in /usr/local/lib/python3.6/dist-packages (from sentence-transformers==0.3.9->-r requirements.txt (line 2)) (1.7.0+cu110)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (2020.11.13)\n",
-      "Requirement already satisfied: sentencepiece!=0.1.92 in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (0.1.91)\n",
-      "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (3.0.12)\n",
-      "Requirement already satisfied: protobuf in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (3.13.0)\n",
-      "Requirement already satisfied: sacremoses in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (0.0.43)\n",
-      "Requirement already satisfied: tokenizers==0.9.2 in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (0.9.2)\n",
-      "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (2.25.0)\n",
-      "Requirement already satisfied: dataclasses; python_version < \"3.7\" in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (0.8)\n",
-      "Requirement already satisfied: packaging in /usr/local/lib/python3.6/dist-packages (from transformers==3.4.0->-r requirements.txt (line 3)) (20.4)\n",
-      "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from jsonlines==1.2.0->-r requirements.txt (line 4)) (1.15.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->pyserini==0.9.4.0->-r requirements.txt (line 1)) (2.1.0)\n",
-      "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->pyserini==0.9.4.0->-r requirements.txt (line 1)) (0.17.0)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas->pyserini==0.9.4.0->-r requirements.txt (line 1)) (2020.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.6/dist-packages (from pandas->pyserini==0.9.4.0->-r requirements.txt (line 1)) (2.8.1)\n",
-      "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from nltk->sentence-transformers==0.3.9->-r requirements.txt (line 2)) (7.1.2)\n",
-      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.6/dist-packages (from torch>=1.6.0->sentence-transformers==0.3.9->-r requirements.txt (line 2)) (3.7.4.3)\n",
-      "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from torch>=1.6.0->sentence-transformers==0.3.9->-r requirements.txt (line 2)) (0.18.2)\n",
-      "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf->transformers==3.4.0->-r requirements.txt (line 3)) (50.3.2)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (3.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (2020.11.8)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (1.26.2)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /usr/lib/python3/dist-packages (from requests->transformers==3.4.0->-r requirements.txt (line 3)) (2.6)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging->transformers==3.4.0->-r requirements.txt (line 3)) (2.4.7)\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "!pip install -r requirements.txt"
+    "## PyTorch GPU setup"
    ]
   },
   {
@@ -212,6 +157,13 @@
     "else:\n",
     "    torch_device = torch.device('cpu')\n",
     "    use_pin_memory = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import packages"
    ]
   },
   {
@@ -387,7 +339,11 @@
     "id": "-OD20Xch1zJQ"
    },
    "source": [
-    "## SBERT Model"
+    "## Siamese Network with BERT Pooling (SBERT) Model\n",
+    "\n",
+    "- We use the pretrained weights released by the BERT-ADA authors.\n",
+    "- Please download and extract them to the same directory as this notebook: https://github.com/deepopinion/domain-adapted-atsc#release-of-bert-language-models-finetuned-on-a-specific-domain\n",
+    "    - **NOTE**: Because BERT-ADA was trained with an older version of `transformers`, you need to add `\"model_type\": \"bert\"` to `config.json`."
    ]
   },
   {
@@ -1072,7 +1028,7 @@
    },
    "outputs": [],
    "source": [
-    "model.save(os.path.join('.', 'Siamese', sbert_new_model_name))"
+    "model.save(sbert_new_model_name)"
    ]
   },
   {
@@ -1092,8 +1048,8 @@
    },
    "outputs": [],
    "source": [
-    "# Load the existing trained model here\n",
-    "# model = sentence_transformers.SentenceTransformer(os.path.join('.', 'Siamese', sbert_new_model_name))"
+    "# Uncomment the following line to oad the existing trained model.\n",
+    "# model = sentence_transformers.SentenceTransformer(sbert_new_model_name)"
    ]
   },
   {
@@ -1135,7 +1091,8 @@
    },
    "outputs": [],
    "source": [
-    "top_k = 1000"
+    "# Get the top k matches from kNN search\n",
+    "top_k = 400"
    ]
   },
   {
@@ -1144,7 +1101,7 @@
     "id": "VIA1mcWS2FXH"
    },
    "source": [
-    "### `trec_eval` evaluation: Laptop"
+    "### Generate query results file for `trec_eval` evaluation: Laptop"
    ]
   },
   {
@@ -1155,7 +1112,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_documents_path = os.path.join('.', 'data', 'collection_no_metadata', 'laptop_test.jsonl')\n",
+    "test_laptop_documents_path = os.path.join('..', 'BM25', 'collection', 'laptop_test.jsonl')\n",
     "test_laptop_documents_file = jsonlines.open(test_laptop_documents_path)"
    ]
   },
@@ -1195,7 +1152,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_queries_path = os.path.join('.', 'BM25', 'test_queries_laptop.txt')\n",
+    "test_laptop_queries_path = os.path.join('..', 'BM25', 'test_queries_laptop.txt')\n",
     "test_laptop_queries = open(test_laptop_queries_path, 'r').readlines()"
    ]
   },
@@ -1207,7 +1164,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_result_path = os.path.join('.', 'Siamese_results', sbert_new_model_name, 'top_' + str(top_k))\n",
+    "test_laptop_result_path = os.path.join('.', 'query_results', sbert_new_model_name, 'top_' + str(top_k))\n",
     "pathlib.Path(test_laptop_result_path).mkdir(parents=True, exist_ok=True)\n",
     "test_laptop_result_file = 'query_results_laptop_' + sbert_new_model_name + '.txt'"
    ]
@@ -2205,7 +2162,7 @@
     }
    ],
    "source": [
-    "!rm {os.path.join(test_laptop_result_path, test_laptop_result_file)}\n",
+    "!rm -r {os.path.join(test_laptop_result_path, test_laptop_result_file)}\n",
     "\n",
     "for q_num, q in enumerate(test_laptop_queries):\n",
     "    print(\"Processing query\", q_num, \":\", q)\n",
@@ -2269,7 +2226,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_documents_path = os.path.join('.', 'data', 'collection_no_metadata', 'restaurant_test.jsonl')\n",
+    "test_restaurants_documents_path = os.path.join('..', 'BM25', 'collection', 'restaurant_test.jsonl')\n",
     "test_restaurants_documents_file = jsonlines.open(test_restaurants_documents_path)"
    ]
   },
@@ -2321,7 +2278,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_queries_path = os.path.join('.', 'BM25', 'test_queries_restaurant.txt')\n",
+    "test_restaurants_queries_path = os.path.join('..', 'BM25', 'test_queries_restaurant.txt')\n",
     "test_restaurants_queries = open(test_restaurants_queries_path, 'r').readlines()"
    ]
   },
