siamese/sentence_bert_contrastive.ipynb: notebook cleanups

--- a/siamese/sentence_bert_contrastive.ipynb
+++ b/siamese/sentence_bert_contrastive.ipynb
@@ -7,7 +7,7 @@
     "# Siamese Network with BERT Pooling: Contrastive Loss Function\n",
     "\n",
     "- We train our siamese network with the training data from SemEval 2014.\n",
-    "- We use **contrastive loss function**.\n",
+    "- We use the **contrastive loss function**.\n",
     "- We then run k-NN search with test queries (previously generated for BM25) to produce test query results."
    ]
   },
@@ -266,10 +266,10 @@
    "outputs": [],
    "source": [
     "# 0-1 label (for contrastive loss)\n",
-    "with open(os.path.join('.', 'data', 'our_datasets', 'laptop_train.json')) as laptop_train_file:\n",
+    "with open(os.path.join('..', 'data', 'our_datasets', 'laptop_train.json')) as laptop_train_file:\n",
     "    laptop_train = json.load(laptop_train_file)\n",
     "\n",
-    "with open(os.path.join('.', 'data', 'our_datasets', 'restaurant_train.json')) as restaurants_train_file:\n",
+    "with open(os.path.join('..', 'data', 'our_datasets', 'restaurant_train.json')) as restaurants_train_file:\n",
     "    restaurants_train = json.load(restaurants_train_file)"
    ]
   },
@@ -1048,7 +1048,7 @@
    },
    "outputs": [],
    "source": [
-    "# Uncomment the following line to oad the existing trained model.\n",
+    "# Uncomment the following line to load the existing trained model.\n",
     "# model = sentence_transformers.SentenceTransformer(sbert_new_model_name)"
    ]
   },
@@ -1091,7 +1091,7 @@
    },
    "outputs": [],
    "source": [
-    "# Get the top k matches from kNN search\n",
+    "# Get the top k matches from k-NN search\n",
     "top_k = 400"
    ]
   },
@@ -2204,7 +2204,7 @@
     "id": "af6kMAmYEvyq"
    },
    "source": [
-    "### `trec_eval` evaluation: Restaurants"
+    "### Generate query results file for `trec_eval` evaluation: Restaurant"
    ]
   },
   {
